--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   intl: ^0.17.0
   provider: ^6.0.2
+  firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.10
 
   flutter:
     sdk: flutter
